--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,6 @@ Flask==3.0.0
 pandas==2.1.4
 joblib==1.3.2
 gunicorn==21.2.0
-scikit-learn==1.3.2
-
+numpy==1.26.4
+scipy==1.11.3
+scikit-learn==1.2.2
